echo hello world

--- a/challenge2/Docker/Dockerfile
+++ b/challenge2/Docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM debian:11
-RUN apt update && apt upgrade -y
-WORKDIR /testing-CICD/challenge2/Docker
-CMD echo "first dockerfile"
+RUN apt-get update && apt-get upgrade -y
+# WORKDIR /testing-CICD/challenge2/Docker
+CMD ["echo", "Hello World!"]
