--- a/challenge2/Docker/Dockerfile
+++ b/challenge2/Docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM debian:11
-RUN apt-get update && apt-get upgrade -y
+RUN apt-get update 
+RUN apt-get upgrade
 # WORKDIR /testing-CICD/challenge2/Docker
 CMD ["echo", "Hello World!"]
