created non root user image

--- a/challenge2/Docker/Dockerfile
+++ b/challenge2/Docker/Dockerfile
@@ -1,5 +1,6 @@
 FROM debian:11
 RUN apt-get update 
 RUN apt-get upgrade
-# WORKDIR /testing-CICD/challenge2/Docker
+WORKDIR /testing-CICD/challenge2/Docker
+RUN useradd -u 8877 leandra
 CMD ["echo", "Hello World!"]
