--- a/challenge2/Docker/Dockerfile
+++ b/challenge2/Docker/Dockerfile
@@ -1,6 +1,25 @@
+# Base Image
 FROM debian:11
-RUN apt-get update 
-RUN apt-get upgrade
-WORKDIR /testing-CICD/challenge2/Docker
-RUN useradd -u 8877 leandra
-CMD ["echo", "Hello World!"]
+# WORKDIR /testing-CICD/challenge2/Docker
+
+# patch the operating system
+RUN apt-get update && apt-get upgrade -y 
+
+# Create the user & Change user to your name
+ARG USERNAME=leandra
+ARG USER_UID=1000
+ARG USER_GID=$USER_UID
+
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME 
+
+# USER $USERNAME
+
+# Create new file in home directory
+WORKDIR /home
+RUN touch /home/test.txt
+
+# Run ls when container starts
+    # ??RUN docker build -u leandra non-root  
+
+CMD ["echo", "Hello World!", "echo", "USER"]
