--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -28,3 +28,15 @@ jobs:
         
       - name: Run python unittest
         run: python challenge1/unit_test.py
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+            file: testing-CICD/challenge2/Docker/
+        run: |
+          docker build -t git-image .
+          docker run -t git-image
+
