--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,11 +32,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
-        # uses: docker/build-push-action@v2
-        with:
-          file: testing-CICD/challenge2/Docker/
-        run: |
-          docker build -t git-image .
-          docker run -t git-image
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      # - name: Build and push
+      #   # uses: docker/build-push-action@v2
+      #   with:
+      #     file: testing-CICD/challenge2/Docker/
+      #   run: |
+      #     docker build -t git-image .
+      #     docker run -t git-image
 
