--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,6 +33,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build the Docker image
+        with:
+          file: testing-CICD/challenge2/Docker/
         run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
       # - name: Build and push
       #   # uses: docker/build-push-action@v2
