--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,8 +33,6 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build the Docker image
-        run: | 
-          docker build . --file ./challenge2/Docker/Dockerfile --tag git-image:$(date +%s)
+        run: docker build . --file ./challenge2/Docker/Dockerfile --tag my-image-name:$(date +%s)
 
-          docker run . --file ./challenge2/Docker/Dockerfile --tag git-image:$(date +%s)
 
